--- a/blogpost.html
+++ b/blogpost.html
@@ -9,8 +9,11 @@
 </head>
 <body>
     <div id="container">
+        <did id="cabecera">
+            cabecera
+            </did>
         <h1>Aqui vamos a hacer un blog post</h1>
         <p>Y este es el parrafo de inicio</p>
-    </div>
+</did>
 </body>
 </html>
