--- a/blogpost.html
+++ b/blogpost.html
@@ -9,11 +9,13 @@
 </head>
 <body>
     <div id="container">
-        <did id="cabecera">
-            cabecera
-            </did>
+        <div id="cabecera">
+            <span id="tagline">Blog de los cojones </span> 
+            </div>
+            <div id="post">
         <h1>Aqui vamos a hacer un blog post</h1>
         <p>Y este es el parrafo de inicio</p>
+    </div>
 </did>
 </body>
 </html>
