--- a/blogpost.html
+++ b/blogpost.html
@@ -10,5 +10,7 @@
 <body>
     <h1>Aqui vamos a hacer un blog post</h1>
     <p>Y este es el parrafo de inicio</p>
+    <p>Los blogs son la mejor forma de compatir información</p>
+    <p>Suscribete y dale like</p>
 </body>
 </html>
