Una versión de los pedoretes

--- a/blogpost.html
+++ b/blogpost.html
@@ -10,7 +10,7 @@
 <body>
     <div id="container">
         <div id="cabecera">
-            <span id="tagline">Blog de los cojones </span> 
+            <span id="tagline">Blog de los cojones pedoretes </span> 
             </div>
             <div id="post">
         <h1>Aqui vamos a hacer un blog post</h1>
